Envio de imagens em pacientes cadastrados.

--- a/templates/add_pac.html
+++ b/templates/add_pac.html
@@ -8,9 +8,9 @@
     <body>
         <center>
             <form method="POST" enctype='multipart/form-data' action="gravar_paciente">
-                Nome: <input type="text" placeholder="Nome paciente" name="nome_paciente" required><br>
-                cpf: <input type="tel" placeholder="xxx.xxx.xxx-xx" name="cpf" required><br>
-                imagens: <input type="file" name="imagens" multiple><br>
+                <p>Nome: <input type="text" placeholder="Nome paciente" name="nome_paciente" required></p>
+                <p>cpf: <input type="tel" placeholder="xxx.xxx.xxx-xx" name="cpf" required></p>
+                <p>imagens: <input type="file" name="imagens" multiple></p>
                 <input type="submit" value="Enviar >>">
             </form>
         </center>
