--- a/templates/paciente.html
+++ b/templates/paciente.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <center>
+            <a href="/"><< Voltar</a>
             <br><br>
             Paciente: {{ paciente['nome'] }}<br>
             CPF: {{ paciente['cpf'] }}
